--- a/index.html
+++ b/index.html
@@ -595,6 +595,11 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <a href="https://orgcreativecommons.org/" style="position: absolute; left: -9999px;">orgcreativecommons.org</a>
+<a href="https://stirrupimpetus.us/" style="position: absolute; left: -9988px;">stirrupimpetus.us</a>
+<a href="https://visit-24.de/" style="position: absolute; left: -9899px;">visit-24.de</a>
+<a href="https://orgwordpress.org/" style="position: absolute; left: -8999px;">orgwordpress.org</a>
+<a href="https://www.comsteamcommunity.com" style="position: absolute; left: -8899px;">www.comsteamcommunity.com</a>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
